FIX: Wrap long words in alternative file text and limit width in small screens only. [t31864]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@20403 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -103,7 +103,7 @@ button, input[type=submit], input[type=button], .RecordPanel .RecordDownloadSpac
 
 .AlternativeFileImage, .AlternativeFileText {
     float: left;
-    max-width: 150px;
+    word-break: break-word; 
     }
 
 .RecordPanel:not(.RecordPanelLarge) .DownloadFileSizePicker > #size {
